# Rust-Blockchian-Block

./: 1. Introduce to blockchain.md  2. creating block and its chain by using Rust.md  2. creating block and its chain byusing Rust.md  2. creating block using Rust.md  3.how to create block hash .md  4.using trait on blockchain .md  5.operator overloading and proof of work.md  README.md  block hash .md  how to create block hash .md
blockchain-module-dir/src/: main.rs
blockchain-module-dir/src/blockchain/: mod.rs
blockchain-module-file/src/: blockchain.rs  main.rs
blockchain/src/: main.rs
proof of work and mining/: Cargo.toml
proof of work and mining/src/: main.rs
proof of work and mining/src/blockchain/: mod.rs  transaction.rs
