[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
serde = {version = "1.0.207", features=["derive"] }
serde_json = "1.0.124"
sha2 = "0.10.8"
